--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RDS Demo App 1</title>
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
